<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Input untuk Nama Mata Kuliah -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/course_name_hint"
        android:layout_marginTop="32dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <!-- Input untuk Nilai Mata Kuliah -->
    <EditText
        android:id="@+id/scoreEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/course_score_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:padding="8dp"/>

    <!-- Tombol Tambah Mata Kuliah -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_button"
        app:layout_constraintTop_toBottomOf="@id/scoreEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"/>

    <!-- RecyclerView untuk Daftar Mata Kuliah -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recommendButton"/>

    <!-- Tombol Rekomendasi -->
    <Button
        android:id="@+id/recommendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommend_button"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
